# modulus-makani

./: .editorconfig  .gitignore  Makefile  README.md  convert_legacy_to_flexible.py  inference.py  pyproject.toml  train.py  train_profile.py
.github/workflows/: tests.yml
config/: README.md  afnonet.yaml  icml_models.yaml  sfnonet.yaml  vit.yaml
data_process/: get_histograms.py  get_stats.py  h5_align.py  h5_convert.py  parallel_copy.py  zarr_convert.py
datasets/copernicus/: get_data.py
datasets/era5/: __init__.py  test_era5.py  test_time.py  time.py
docker/: Dockerfile  build.sh
inference/: inferencer.py
makani/: __init__.py  convert_legacy_to_flexible.py  inference.py  train.py  train_profile.py
makani/data_process/: get_histograms.py  get_stats.py  h5_align.py  parallel_copy.py
makani/datasets/copernicus/: get_data_u_v_z_t.py
makani/datasets/era5/: __init__.py  test_era5.py  test_time.py  time.py
makani/inference/: inferencer.py
makani/models/: Readme.md  __init__.py  helpers.py  model_package.py  model_registry.py  preprocessor.py  stepper.py
makani/models/common/: __init__.py  activations.py  contractions.py  factorizations.py  layers.py  spectral_convolution.py
makani/models/networks/: afnonet.py  afnonet_v2.py  debug.py  sfnonet.py  vit.py
makani/mpu/: fft3d.py  helpers.py  layer_norm.py  layers.py  mappings.py
makani/networks/: Readme.md  activations.py  afnonet.py  afnonet_v2.py  contractions.py  debug.py  factorizations.py  helpers.py  layers.py  model_package.py  models.py  preprocessor.py  sfnonet.py  spectral_convolution.py  vit.py
makani/utils/: YParams.py  comm.py  conditioning_inputs.py  dataloader.py  features.py  grids.py  img_utils.py  inferencer.py  logging_utils.py  losses.py  metric.py  parse_dataset_metada.py  trainer.py  trainer_profile.py  visualize.py
makani/utils/dataloaders/: dali_es_helper_2d.py  data_loader_dali_2d.py  data_loader_dummy.py  data_loader_multifiles.py  zarr_helper.py
makani/utils/metrics/: functions.py
mpu/: fft3d.py  helpers.py  layer_norm.py  layers.py  mappings.py
networks/: afnonet.py  afnonet_v2.py  debug.py  factorizations.py  helpers.py  layers.py  model_package.py  models.py  preprocessor.py  sfnonet.py  spectral_convolution.py  vit.py
notebooks/: inference.ipynb
tests/: test_dataloader.py  test_entrypoints.py  test_metrics.py  test_models.py  test_trainer.py  testutils.py
tests/distributed/: tests_fft.py
utils/: comm.py  conditioning_inputs.py  dataloader.py  logging_utils.py  losses.py  metric.py  trainer.py  trainer_profile.py
utils/dataloaders/: data_loader_dali_2d.py  data_loader_dummy.py  data_loader_multifiles.py  zarr_helper.py
utils/metrics/: functions.py
